# Rust-Waveshare-esp-32s3-Touch-LCD-3.5B-weather-touch-screen-app-demo-working

./: .gitignore  Cargo.toml  LICENSE  README.md  sdkconfig.defaults
.cargo/: config.toml
components/board_power/: CMakeLists.txt  board_power.c  board_power.h  bsp_axp2101.cpp  bsp_axp2101.h  bsp_i2c.c  bsp_i2c.h
display_tester/: Cargo.toml
display_tester/src/: app.rs  display_config.rs  esp_display.rs  main.rs  test_generator.rs  test_patterns.rs  timing.rs
factory_demo_backups/2026-02-08_1133_factory_demo/: README.md  SHA256SUMS.txt
scripts/: flash.sh  gen_icons.py  make_weather_icons.py
src/: bme280_sensor.rs  config.rs  console.rs  debug_flags.rs  framebuffer.rs  http_client.rs  hvac.rs  layout.rs  main.rs  pressure_history.rs  speaker.rs  touch.rs  weather.rs  wifi.rs
src/views/: about.rs  forecast.rs  hvac.rs  i2c_scan.rs  indoor.rs  mod.rs  now.rs  pressure_hvac.rs  warning.rs  wifi_scan.rs
