[package]
name = "display_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

esp-idf-sys = { version = "0.36", features = ["binstart"] }
esp-idf-svc = "0.51"

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.esp-idf-sys]

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_lcd_axs15231b", version = "1.0.0" }
